--- a/src/app/pages/post-list/post-list.html
+++ b/src/app/pages/post-list/post-list.html
@@ -12,7 +12,7 @@
   </h3>
 
   <small>
-    Por {{ post.author }} - {{ post.created_at }}
+    Por {{ post.author }} - {{ post.created_at }} - {{post.id}}
   </small>
 
   <p>{{ post.content }}</p>
