se pudo terminar de conectar correctamente con el backend; ademas se agregaron las imagenes y validaciones en el formulario.

--- a/src/app/pages/post-list/post-list.html
+++ b/src/app/pages/post-list/post-list.html
@@ -10,6 +10,13 @@
       {{ post.title }}
     </a>
   </h3>
+  <img
+    *ngIf="post.image"
+    [src]="post.image"
+    alt="{{ post.title }}"
+    width="300"
+  />
+
 
   <small>
     Por {{ post.author }} - {{ post.created_at }} - {{post.id}}
