--- a/src/app/pages/posts-detail/posts-detail.html
+++ b/src/app/pages/posts-detail/posts-detail.html
@@ -1,12 +1,25 @@
-<h1>Detalle del Post que estoy haciendo brether</h1>
-<h2>{{ post?.title }}</h2>
-
-<p>
-  <small>
-    Por {{ post?.author }} - {{ post?.created_at }}
-  </small>
+<p *ngIf="posts.length === 0">
+  No hay publicaciones disponibles.
 </p>
 
-<p>{{ post?.content }}</p>
 
-<h1>{{ post?.id}}</h1>
+<div *ngIf="post as p">
+  <h1>Detalle del Post que estoy haciendo brether</h1>
+  <h2>{{ post.title }}</h2>
+
+  <p>
+    <small>
+      Por {{ post.author }} - {{ post.created_at }}
+    </small>
+  </p>
+
+    <img
+      *ngIf="post.image"
+      [src]="post.image"
+      alt="{{ post.title }}"
+      width="300"
+    />
+
+  <p>{{ post.content }}</p>
+</div>
+
