se creo el botton para eliminar publicaciones segun su ID...(Todo conectado con el backend.)

--- a/src/app/pages/post-list/post-list.html
+++ b/src/app/pages/post-list/post-list.html
@@ -23,5 +23,10 @@
   </small>
 
   <p>{{ post.content }}</p>
+
+  <button (click)="onDelete(post.id)" class="btn btn-danger">BORRAR</button>
   <hr>
+
+
+
 </article>
