--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -9,5 +9,7 @@
     <div class="buttons">
         <a routerLink="/home">Home</a>
         <a routerLink="/publicaciones">Publicaciones</a>
+        <a routerLink="/create">Crear</a>
+        <a routerLink="/register">registro</a>
     </div>
 </div>
