se crearon algunas de las validaciones del formulario de registro

--- a/src/app/auth/register/register.css
+++ b/src/app/auth/register/register.css
@@ -59,3 +59,10 @@
 .login-link a:hover {
     text-decoration: underline;
 }
+
+.is-valid{
+    background-color: green;
+}
+.is-invalid{
+    background-color: red;
+}
