--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -10,6 +10,6 @@
         <a routerLink="/home">Home</a>
         <a routerLink="/publicaciones">Publicaciones</a>
         <a routerLink="/create">Crear</a>
-        <a routerLink="/register">registro</a>
+        <a routerLink="/register">Registro</a>
     </div>
 </div>
