--- a/src/app/auth/register/register.html
+++ b/src/app/auth/register/register.html
@@ -1,32 +1,60 @@
 <div class="wrapper">
     <div class="register-card">
-        <form id="register-form">
+        <form id="register-form"  [formGroup]="registerForm" (ngSubmit)="onRegister($event)">
             
             <h2 class="title">REGISTRO</h2>
             <img src="logo/blogPersonal-logo.png" alt="" style="width: 100px; height: 100px; margin-bottom: 10px;">
             <p class="subtitle">Completaa todo para registrarte</p>
             <div class="form-floating mb-3 ">
-                <input type="text" class="form-control" id="floatingName" placeholder="Nombre" required>
+                <input type="text" class="form-control" id="floatingName" formControlName="name" placeholder="Nombre" required>
                 <label for="floatingName">Nombre</label>
+                    @if (Name?.errors && Name?.touched) {
+                        @if(Name?.hasError('required')) {
+                            <p class="text-danger">
+                                Campo requerido capo
+                            </p>
+                        }
+                    }
                 
             </div>
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="Email" required>
+                <input type="email" class="form-control" id="floatingInput" formControlName="email" placeholder="Email" required>
                 <label for="floatingInput">Email</label>
+                    @if (Email?.errors && Email?.touched) {
+                        @if(Email?.hasError('required')) {
+                            <p class="text-danger">
+                                Campo requerido capo
+                            </p>
+                        }
+                    }
                 
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingUser" placeholder="Usuario" required>
+                <input type="text" class="form-control" id="floatingUser" formControlName="user" placeholder="Usuario" required>
                 <label for="floatingUser">Usuario</label>
+                    @if (User?.errors && User?.touched) {
+                        @if(User?.hasError('required')) {
+                            <p class="text-danger">
+                                Campo requerido capo
+                            </p>
+                        }
+                    }
                 
             </div>
             <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña"required>
+                <input type="password" class="form-control" id="floatingPassword" formControlName="password" placeholder="Contraseña" required [class.is-valid]="Password?.valid && Password?.touched"  [class.is-invalid]="Password?.invalid && Password?.touched" />
                 <label for="floatingPassword">Contraseña</label>
+                    @if (Password?.errors && Password?.touched) {
+                        @if(Password?.hasError('required')) {
+                            <p class="text-danger">
+                                Campo requerido capo
+                            </p>
+                        }
+                    }
                 
             </div>
             <div class="d-grid gap-2">
-                <button class="btn btn-register w-100" type="button">Registrarme</button>
+                <button class="btn btn-register w-100" type="submit">Registrarme</button>
             </div>
             <div>
                 <p class="login-link mt-3">Si tenes cuenta <a routerLink="/login">Inicia Sesion</a></p>
