se realizaron todas las validaciones del formulario del registro y del inicio de sesion, ademas se agregaron como validaciones para ver si funciona bien la pagina.

--- a/src/app/auth/login/login.css
+++ b/src/app/auth/login/login.css
@@ -59,3 +59,11 @@
 .register-link a:hover {
     text-decoration: underline;
 }
+
+.is-valid label {
+    background-color: green;
+}
+
+.is-invalid label {
+    background-color: red;
+}
